--- a/pax-cdi-manual/src/main/asciidoc/index.adoc
+++ b/pax-cdi-manual/src/main/asciidoc/index.adoc
@@ -86,9 +86,9 @@ Pax CDI is based on a portable extension which looks up dependencies from the OS
 
 === Bean Bundles
 
-Pax CDI introduces the concept of a bean bundle, being a CDI-enabled OSGi bundle. A bundle is 
+Pax CDI introduces the concept of a *bean bundle*, being a CDI-enabled OSGi bundle. A bundle is 
 turned into a bean bundle by requiring the `pax.cdi` extender capability, see 
-Requirements and Capabilities for more details.
+<<Requirements and Capabilities>> for more details.
 
 A bundle which is a valid bean deployment archive but does not require the `pax.cdi` extender 
 capability will not be considered by Pax CDI.
@@ -111,7 +111,7 @@ statically on injection or dynamically on every method invocation.
 
 The module concept of Java EE 6 is rather coarse: A web application is a single module, typically a 
 fairly large one, with a single CDI container. You cannot easily share components between 
-applications, except by embedding them into each WEB-INF/lib or by moving them to a shared 
+applications, except by embedding them into each `WEB-INF/lib` or by moving them to a shared 
 location of the application server, making them visible to all applications deployed on the server.
 
 CDI injection cannot cross module boundaries. The only way to indirectly inject shared resources or 
@@ -198,9 +198,10 @@ private IceCreamService iceCream;
 private Instance<IceCreamService> iceCreamServices;
 ----
 
-A filter member may be added to the @OsgiService annotation to narrow down the set of matching OSGi services.
+A filter member may be added to the `@OsgiService` annotation to narrow down the set of matching 
+OSGi services.
 
-Instance<T> implements Iterable<T>, so to iterate over all matching services, simply write:
+`Instance<T>` implements `Iterable<T>`, so to iterate over all matching services, simply write:
 
 [source]
 ----
@@ -219,7 +220,8 @@ public class ChocolateService implements IceCreamService {
 }
 ----
 
-By default, the service bean has CDI scope @SingletonScoped and the corresponding OSGi service is published with singleton scope. The @SingletonScoped annotation is optional.
+By default, the service bean has CDI scope `@SingletonScoped` and the corresponding OSGi service 
+is published with singleton scope. The `@SingletonScoped` annotation is optional.
 
 == Publishing a Bean as OSGi Service with bundle scope
 
@@ -301,7 +303,7 @@ are declared in special bundle manifest headers. Pax CDI uses the capability con
 
 == CDI Extender Capability
 
-Each bean bundle must require a CDI extender capability
+Each bean bundle must require the CDI extender capability:
 
  Require-Capability : osgi.extender; filter:="(osgi.extender=pax.cdi)"
 
@@ -309,13 +311,10 @@ This capability is provided by the `pax-cdi-extender` which uses the OSGi extend
 CDI-enable other bundles. The bean bundle will fail to resolve if there is no bundle providing 
 a matching capability.
 
-Theoretically, any other bundle might provide the matching `pax.cdi` extender capability, so there 
-is just a very loose coupling between bean bundles and `pax-cdi-extender`.
+In theory, any other bundle might provide the matching `pax.cdi` extender capability, so there 
+is just a very loose coupling between bean bundles and the `pax-cdi-extender` bundle.
 
 The marker manifest header `Pax-ManagedBeans` is deprecated since Pax CDI 0.4.0.
-
-Up to Pax CDI 0.3.0, if you forgot to provision the CDI extender bundle, you would not even see 
-a clear error message in this case.
 
 == Portable CDI extension bundles
 
@@ -340,7 +339,7 @@ extension capability, or else the CDI extender will ignore the extension bundle.
 
 == Pax CDI OSGi Extension
 
-Pax CDI itself provides and portable CDI extension for publishing and consuming OSGi services by 
+Pax CDI itself provides a portable CDI extension for publishing and consuming OSGi services by 
 means of CDI annotations. A bean bundle wishing to use this extension must require the 
 following extension capability:
 
@@ -354,11 +353,13 @@ packages from the given bundle.
 
 == Service Components
 
-A managed bean with an @OsgiServiceProvider annotation is a service component.
+A managed bean with an `@OsgiServiceProvider` annotation is a *service component*.
 
 == Service Component Dependency
 
-A dependency of a service component bean is any injection point qualified with @OsgiService. The dependency is available, when a matching OSGi service exists. It is unavailable when no matching OSGi service exists.
+A dependency of a service component bean is any injection point qualified with `@OsgiService`. 
+The dependency is *available*, when a matching OSGi service exists. It is *unavailable* when no 
+matching OSGi service exists.
 
 == Required and Optional Dependencies
 
@@ -371,7 +372,7 @@ Initially, each service component is unavailable.
 A service component becomes available when all its dependencies are available. A service component 
 without dependencies becomes available immediately after container start-up.
 
-When a service becomes available, it is registered by the Pax CDI Extender as an OSGi service.
+When a service component becomes available, it is registered by the Pax CDI Extender as an OSGi service.
 
 An available service component becomes unavailable when one of its dependencies becomes unavailable. 
 A service component without dependencies becomes unavailable when its bundle is stopped.
@@ -386,18 +387,36 @@ In a minimal configuration, i.e. without a web container, Pax CDI supports bean 
 a combination of OSGi bundles and CDI bean archives, offering all CDI features available in a 
 Java SE (or non-Java-EE) environment.
 
-In a web configuration, Pax CDI supports web bean bundles, a combination of CDI bean archives 
+In a web configuration, Pax CDI supports *web bean bundles*, a combination of CDI bean archives 
 and web application bundles (WABs), offering all CDI features available in a servlet container, 
 e.g. session and request scoped beans, injection into servlets etc., but not the features 
 requiring a Java EE Web (or Full) Profile container, like injection of persistence contexts 
 or EJBs and declarative transactions.
 
-A web bean bundle is identified by two special manifest headers:
+A bundle is a web bean bundle if it satisfies the following conditions:
 
-* Pax-ManagedBeans, marking the bundle as a bean bundle
-* `Web-ContextPath`, marking the bundle as a web application bundle
+* The bundle is  a bean bundle.
+* The bundle has a `Web-ContextPath` manifest header.
 
-== Runtime Requirements
+= Supported CDI Providers
+
+== Apache OpenWebBeans
+
+Pax CDI can be provisioned with Apache OpenWebBeans 1.5.0 or higher using the `pax-cdi-openwebbeans` adapter. 
+In addition to the adapter, you need to provision OpenWebBeans and its run-time dependencies.
+
+== JBoss Weld
+
+Pax CDI can be provisioned with JBoss Weld 2.2.0 or higher using the `pax-cdi-weld` adapter. 
+In addition to the adapter, you need to provision `weld-osgi-bundle` and its run-time dependencies.
+
+== Dependencies
+
+To find the correct set of dependencies for any of these supported configurations, have a look 
+at `org.ops4j.pax.cdi.test.support.TestConfiguration` or at the Karaf features in 
+`pax-cdi-features`.
+
+= Runtime Requirements
 
 Runtime support for non-web bean bundles requires the following Pax CDI bundles:
 
@@ -415,45 +434,15 @@ OpenWebBeans or Weld. In addition to the Pax CDI bundles listed above, you need 
 *    pax-cdi-web
 *    pax-cdi-web-openwebbeans or pax-cdi-web-weld
 
-pax-cdi-web has a compile-time dependency on Pax Web, by implementing the WebAppDependencyHolder 
+`pax-cdi-web` has a compile-time dependency on Pax Web, by implementing the `WebAppDependencyHolder` 
 interface provided by Pax Web (since 3.0.0.M1). Pax Web has no compile-time or run-time 
-dependencies on Pax CDI. Since pax-cdi-web is an optional add-on for web bean bundles, there is 
+dependencies on Pax CDI. Since `pax-cdi-web` is an optional add-on for web bean bundles, there is 
 only a very loose coupling between Pax CDI and Pax Web.
 
 Pax CDI only works with the traditional Pax Web Jetty container. 
 It does not yet support the Pax Web Tomcat container.
 
-= Supported CDI Providers
 
-== Apache OpenWebBeans
-
-Pax CDI can be used with Apache OpenWebBeans 1.1.5 or higher using the pax-cdi-openwebbeans adapter. 
-In addition to the adapter, you need to provision OpenWebBeans and its run-time dependencies.
-
-Earlier versions of OpenWebBeans will not work due to OWB-668.
-
-== JBoss Weld 1.x
-
-Weld 1.2.0.Beta1 is supported since Pax CDI 0.3.0 using the pax-cdi-weld adapter. In addition to 
-the adapter, you need to provision weld-osgi-bundle and its run-time dependencies.
-
-Earlier releases of Weld will not work in OSGi environments due to a global container singleton 
-used by Weld, which does not match the container-per-bundle approach of Pax CDI.
-
-== JBoss Weld 2.x
-
-2.1.0 and newer versions are supported since Pax CDI 0.5.0 using the pax-cdi-weld adapter. 
-In addition to the adapter, you need to provision weld-osgi-bundle and its run-time dependencies.
-
-Weld 2.0.x will not work in OSGi due to the same global container singleton found in Weld 1.1.x.
-
-Pax CDI currently targets the CDI 1.0 specification, so new features of the CDI 1.1 specification 
-are not guaranteed to work.
-
-== Dependencies
-
-To find the correct set of dependencies for any of these supported configurations, have a look 
-at org.ops4j.pax.cdi.test.support.TestConfiguration or at the Karaf features in pax-cdi-features.
 
 
 // Return to normal title levels 
